# hermes-council

./: .gitignore  Dockerfile  README.md  docker-run.sh  pyproject.toml
.github/workflows/: smoke.yml
docker/: council_demo.py  entrypoint.sh
examples/: love-vs-fear-debate.md  websocket-vs-sse-synthesis.md
examples/websocket-vs-sse/: agents.json
examples/websocket-vs-sse/cross/: elena-vasquez.json  james-okonkwo.json  marcus-chen.json  priya-mehta.json
examples/websocket-vs-sse/position/: elena-vasquez.json  james-okonkwo.json  marcus-chen.json
hermes_council/: __init__.py  contracts.py  runtime.py
skills/council/: SKILL.md
skills/council/references/: composition-guide.md  debate-protocol.md
skills/council/scripts/: orchestrate.py
tests/: test_contracts.py  test_installed_package.py  test_runtime.py
