[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-agent-council"
version = "2.0.0.dev0"
description = "Hermes Agent council plugin foundation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[project.entry-points."hermes_agent.plugins"]
hermes-council = "hermes_council"

[tool.hatch.build.targets.wheel]
packages = ["hermes_council"]
